[MODINVOICE-613]. Update code, add unit tests